Archive/c3a010de13e922e0d54ac2e3a0831e75-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:6:33: error: expected ‘}’ at end of input
     std::cout << +c << std::endl;
                                 ^
